--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android = "http://schemas.android.com/apk/res/android">
-    <item>
-        <layer-list>
-            <item android:right = "5dp" android:top = "5dp">
-                <shape>
-                    <corners android:radius = "3dp" />
-                    <solid android:color = "#e7f0fc" />
-                </shape>
-            </item>
-            <item android:bottom = "2dp" android:left = "2dp">
-                <shape>
-                    <gradient android:angle = "270" android:endColor = "#4295f0" android:startColor = "#4295f0" />
-                    <stroke android:width = "1dp" android:color = "#e7f0fc" />
-                    <corners android:radius = "4dp" />
-                    <padding android:bottom = "10dp" android:left = "10dp" android:right = "10dp" android:top = "10dp" />
-                </shape>
-            </item>
-        </layer-list>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Gray shadow. -->
+    <item
+        android:left="3dp"
+        android:top="5dp">
+        <shape>
+            <solid android:color="#bb66abff" />
+            <corners android:radius="15dp" />
+        </shape>
     </item>
 
-</selector>
+    <!-- White foreground.  -->
+    <item
+        android:bottom="5dp"
+        android:right="3dp">
+        <shape>
+            <solid android:color="@color/colorPrimary" />
+            <corners android:radius="15dp" />
+        </shape>
+    </item>
+
+</layer-list>
