--- a/app/src/main/res/layout/activity_login_activty.xml
+++ b/app/src/main/res/layout/activity_login_activty.xml
@@ -108,6 +108,7 @@
             android:layout_height = "wrap_content"
             android:text="Forgot password ?"
             android:clickable="true"
+            android:id="@+id/forgot_password"
             android:textColor="@color/colorPrimaryDark"/>
 
 
